# acopf-benchmark

./: .gitignore  LICENSE  README.md  config.yaml  demo.py  pyproject.toml  requirements.txt  setup.py  train.py
benchmark/: benchmark_df.py  benchmark_df_v2.py  benchmark_sl.py
data/processed/: data_pglib_opf_case14_ieee.pt
data/synthetic/processed/: data_pglib_opf_case14_ieee.pt
fm4g/: constraints.py  data_prep.py  opf.py  opf_syn.py  utils.py
fm4g/models/: hgnn.py  homo_gnn.py
hps/: hyperparameter_search.py  quick_demo.py
