[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fm4g"
version = "0.1.0"
description = "Foundation Model for Power Grid - Argonne Group"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="FM4G", email="GridFM@anl.gov" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Copyright :: 2025 :: Argonne National Laboratory",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AI4S-PPFL/GridFM"
